--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gl-file-server-client",
+    "name": "z-file-server-client",
     "version": "0.0.1",
     "author": {
         "name": "Giorgi Maisuradze"
